@@ -1,3 +1,7 @@
+Pending - build 141
+
+-- added doc/usage.txt
+
 15/02/27 - build 140
 
 -- uncrustify, see crusty.cfg
